# pyclip2org

./: .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
src/pyclip2org/: __init__.py  __main__.py  exporter.py  parser.py
tests/: __init__.py  clippings-en.txt  clippings-es.txt  test_exporter.py  test_main.py  test_parser.py
