[tool.poetry]
name = "pyclip2org"
version = "0.1.0"
description = "My Clipping to org-mode notes"
authors = ["Pablo Palazon <pablo.palazon@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ppalazon/pyclip2org"
repository = "https://github.com/ppalazon/pyclip2org"
documentation = "https://pyclip2org.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/ppalazon/pyclip2org/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"
nox-poetry = "^0.5.0"
orgparse = "^0.2.1"
python-slugify = "^4.0.1"
textwrap3 = "^0.9.2"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.790"
typeguard = "^2.9.1"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx = "^3.3.1"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.8.2"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.5"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^3.3.0"
sphinx-rtd-theme = "^0.5.0"
sphinx-click = "^2.5.0"
Pygments = "^2.7.2"
nox-poetry = "^0.5.0"
rope = "^0.18.0"

[tool.poetry.scripts]
pyclip2org = "pyclip2org.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pyclip2org"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
